fixed navbar rendering based on login status and user type. Logout still doesn't work on mobile view.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,3 +324,7 @@ body {
     color: black;
     text-align: center;
 }
+
+.isTherapist, .isPatient, .isLoggedIn, .isLoggedOut {
+    display: none;
+}
